fixed spacing

--- a/src/components/CreatePartyPage/Form/Form_footer/style.scss
+++ b/src/components/CreatePartyPage/Form/Form_footer/style.scss
@@ -163,7 +163,7 @@
   border-radius: 10px;
 
   .radio-label {
-    padding: 8px 30px;
+    padding: 8px 20px;
     width: 100%;
     display: block;
     text-align: left;
